# DonkeyDrone

./: .env  .gitignore  AGENT.md  AGENTS.md  CLAUDE.md  CLAUDE_GAZEBO_PX4_OSX_NATIVE.md  PLAN-3D-flight.md  PLAN-betaflight.md  README.md  README_DRONE.md  betaflight.py  config.py  drone_config.py  drone_gym.py  drone_manage.py  gz_camera_worker.py  main.py  myconfig.py  px4_gazebo_start.sh  pyproject.toml  train.py
donkeydrone/: autonomous_collect.py  config.py  dataset.py  drone_config.py  drone_config_65mm.py  drone_config_80mm.py  drone_config_85mm.py  drone_env.py  drone_gym.py  drone_manage.py  evaluate.py  gz_camera_worker.py  gz_telemetry.py  smoke_test.py  test_thrust.py  torch_model.py  torch_pilot.py  torch_train.py  train.py  tub_schema.py  xbox_controller.py
donkeydrone/templates/static/: main.js
donkeydrone/utils/: __init__.py  betaflight.py
scripts/: collect_train.sh  diagnose.py  start.sh  stop-all.sh  stop_all.sh  test_bf_fdm.py  test_thrust.sh
worlds/: baylands_65mm.sdf  baylands_80mm.sdf  drone_course.sdf  drone_course_65mm.sdf  drone_course_80mm.sdf  drone_course_85mm.sdf  forest_65mm.sdf  forest_80mm.sdf  landing_target_65mm.sdf  landing_target_80mm.sdf  slalom_gates_65mm.sdf  slalom_gates_80mm.sdf
xbox_bridge/: Info.plist  build.sh  main.swift  smoke_test.py
